--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ ul {
 
 .subtleText {
   color: #D1D1D1;
-  font-size: .75em; 
+  font-size: .75em;
 }
 
 
@@ -79,10 +79,17 @@ ul {
   background-position: center 90%;
   float: left;
   margin: 2%;
+  width: 100%;
+  min-height: 320px;
   padding: 1%;
   outline: #3B0B0B dotted thick;
   transition: 0.75s;
   opacity: 1;
+}
+
+.pigTile > img {
+  width: 100%;
+  height: 300px;
 }
 
 .minBackgroundSneak {
